# AlphaEval

./: .gitignore  LICENSE  README.md  alphaagent.py  alphaevolve.py  autoalpha.py  fama.py  gplearn.py  pyproject.toml
AlphaEvolve/: _program.py  config.py  genetic.py  industry.csv  main.ipynb  test_alphaevolve.ipynb
AlphaEvolve/my_qlib/: config.py  log.py  qadapter.py  qfacade.py  qlibbase.py
AlphaQCM/: .gitignore  LICENSE  README.md  train_drl_csi300.py  train_qcm.py  train_qcm_csi300.py  train_qcm_csi500.py
AlphaQCM/alphagen/: config.py
AlphaQCM/alphagen_qlib/: calculator.py  stock_data.py
AlphaQCM/fqf_iqn_qrdqn/: env.py  network.py  utils.py
AlphaQCM/qcm_config/: fqf.yaml  iqn.yaml  qrdqn.yaml
Alphaagent/: alpha_agent.txt
Alphaagent/agents/: eval_agent.py  factor_agent.py  idea_agent.py
AutoAlpha/: _program.py  genetic.py  test_autoalpha.ipynb
FAMA/: __init__.py  experience_chain.py  selection.py
alphagen/: test_alphagen.ipynb  train_maskable_ppo.py
alphagen/alphagen_qlib/: stock_data.py
backtest/: __init__.py  backtester.py  combo.py  ictester.py  modeltester.py  my_ictester.py  my_modeltester.py  noise_proc.py  test.ipynb  test.py
data_collection/: fetch_baostock_data.py  qlib_dump_bin.py
gplearn/: _program.py  config.py  genetic.py  gplearn_test.ipynb
my_qlib/: __init__.py  qadapter.py  qfacade.py  qlibbase.py  typehint.py
my_qlib/backtest/: account.py  backtest.py  exchange.py  position.py  report.py  signal.py  utils.py
my_qlib/contrib/: torch.py
my_qlib/data/: data.py  ops.py  pit.py
my_qlib/manual_decline/: arps.py  (+6 more)
(+149 files in other folders)
