[project]
name = "alphaeval"
version = "0.1.0"
description = ""
authors = [
    {name = "martin",email = "yang.ruoqi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "baostock (>=0.8.9,<0.9.0)",
    "fire (>=0.7.1,<0.8.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.13\" and python_version < \"4.0\"",
    "requests (>=2.32.5,<3.0.0)",
    "pyqlib (>=0.9.7,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
